--- a/AgentPage.xaml
+++ b/AgentPage.xaml
@@ -43,10 +43,10 @@
             <Button Content="Добавить" Name="AddButton" Click="AddButton_Click" HorizontalAlignment="Right"></Button>
         </StackPanel>
         
-        <ListView Name="AgentsListView" Grid.Row="1" Grid.ColumnSpan="4">
+        <ListView Name="AgentsListView" Grid.Row="1" Grid.ColumnSpan="4" SelectionChanged="AgentsListView_SelectionChanged">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid Background="{Binding FonStyle}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="200"/>
                             <ColumnDefinition Width="450"/>
@@ -67,8 +67,13 @@
                         </StackPanel>
 
                         <TextBlock Text="{Binding Email}" Visibility="Hidden"></TextBlock>
-                        <TextBlock Text="Продаж за год" Grid.Row="1" Grid.Column="1" FontSize="20" HorizontalAlignment="Left"></TextBlock>
+                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                            <TextBlock Text="Продаж за год: " FontSize="20" HorizontalAlignment="Left"></TextBlock>
+                            <TextBlock Text="{Binding Prod}" FontSize="20" HorizontalAlignment="Left"></TextBlock>
+                        </StackPanel>
+                        
                         <TextBlock Text="Скидка" Grid.Row="0" Grid.Column="2" FontSize="20" HorizontalAlignment="Center" Height="30"></TextBlock>
+                        <TextBlock Text="{Binding Discount, StringFormat={}{0} %}" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Center" FontSize="20"></TextBlock>
                         <TextBlock Text="{Binding Phone}" Grid.Column="1" Grid.Row="2" FontSize="20" HorizontalAlignment="Left"></TextBlock>
                         <TextBlock Text="{Binding Priority, StringFormat={}Приоритетность: {0:0}}" Grid.Column="1" Grid.Row="3" FontSize="20" HorizontalAlignment="Left"></TextBlock>
                         <Button Content="Изменить" Grid.Column="2" Grid.Row="1" Name="EditButton" HorizontalAlignment="Left" Click="EditButton_Click" Grid.RowSpan="2"></Button>
@@ -105,6 +110,8 @@
             </ListBox>
             <Button Name="RightDirButton" Content="&gt;" Width="20" Height="20"
                     Click="RightDirButton_Click"></Button>
+
         </StackPanel>
+        <Button Name="ChangePriorityButton" Content="Изменить приоритет на ..." Width="300" Visibility="Hidden" Click="ChangePriorityButton_Click" Grid.Column="0" Grid.Row="3"></Button>
     </Grid>
 </Page>
